--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "enzyme-adapter-react-16": "^1.0.4",
     "jest-enzyme": "^4.0.1",
     "material-ui": "^1.0.0-beta.20",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
