--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.12.1",
+    "axios": "^0.17.1",
     "eslint-plugin-react": "^7.5.1",
-    "jest-enzyme": "^4.0.1",
-    "material-ui": "^1.0.0-beta.20",
+    "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-test-renderer": "^16.1.1",
-    "styled-components": "^2.2.3"
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "styled-components": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,10 +24,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^4.11.0",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
