--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
